PabloParking Last Commit

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
           <link rel="stylesheet" type="text/css" href="./styles/style.css">
           <link rel="stylesheet" type="text/css" href="./styles/navbar.css">
           <link rel="preconnect" href="https://fonts.googleapis.com">
-          <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" /> -->
           <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon">
+          <link rel="stylesheet" href="./styles/responsive.css">
      </head>
 
      <body>
@@ -415,9 +415,98 @@
                     </div>
 
                </div>
-
           </section>
           <!--? Contact US Section End -->
+
+
+          <!--? Investors Start -->
+          <section id="investors">
+               <div>
+                    <h1>Investors</h1>
+               </div>
+               <section id="investor-container">
+                    <aside id="investor-left" class="investor-cards">
+                         <div class="investor-image">
+                              <a href="https://www.linkedin.com/in/vishwa-vivek-yadav-28a501240/" target="_blank"><img
+                                        src="./images/Karan.jpg" alt=""></a>
+                         </div>
+                         <div class="investor-details">
+                              <div class="investor-about">
+                                   <p>Vishwa Vivek Yadav</p>
+                                   <p>Passionate for <span class="fullStack"> <span class="red">MERN</span> Stack
+                                             Developers</span></p>
+                                   <div class="investors-link">
+                                        <div>
+                                             <a href="https://github.com/Vishwa9011" target="_blank">
+                                                  <img src="./images/newGithub.png" alt="">
+                                             </a>
+                                        </div>
+                                        <div>
+                                             <a href="https://www.linkedin.com/in/vishwa-vivek-yadav-28a501240/"
+                                                  target="_blank">
+                                                  <img src="./images/linkedin.png" alt="">
+                                             </a>
+                                        </div>
+                                   </div>
+                              </div>
+                         </div>
+                    </aside>
+                    <aside id="investor-mid" class="investor-cards">
+                         <div class="investor-image">
+                              <a target="_blank"
+                                   href="https://www.linkedin.com/in/atanu-karmakar-7ab110227?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BGZndOHC8RgirBfyh225CHQ%3D%3D">
+                                   <img src="./images/AtanuBhai.png" alt=""></a>
+                         </div>
+                         <div class="investor-details">
+                              <div class="investor-about">
+                                   <p>Atanu Karmakar</p>
+                                   <p>Passionate for <span class="fullStack"><span class="red">MERN</span> Stack
+                                             Developers</span></p>
+                                   <div class="investors-link">
+                                        <div>
+                                             <a href="https://github.com/Atanu8250" target="_blank">
+                                                  <img src="./images/newGithub.png" alt="">
+                                             </a>
+                                        </div>
+                                        <div>
+                                             <a href="https://www.linkedin.com/in/atanu-karmakar-7ab110227?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BGZndOHC8RgirBfyh225CHQ%3D%3D"
+                                                  target="_blank">
+                                                  <img src="./images/linkedin.png" alt="">
+                                             </a>
+                                        </div>
+                                   </div>
+                              </div>
+                         </div>
+                    </aside>
+                    <aside id="investor-right" class="investor-cards">
+                         <div class="investor-image">
+                              <a href="https://www.linkedin.com/in/abhishek-ojha-03794b1aa/" target="_blank"><img
+                                        src="./images/abhishekBhai.jpg" alt=""></a>
+                         </div>
+                         <div class="investor-details">
+                              <div class="investor-about">
+                                   <p>Abhishek Ojha</p>
+                                   <p>Passionate for <span class="fullStack"><span class="red">MERN</span> Stack
+                                             Developers</span></p>
+                                   <div class="investors-link">
+                                        <div>
+                                             <a href="https://github.com/AbhishekOjha5972" target="_blank">
+                                                  <img src="./images/newGithub.png" alt="">
+                                             </a>
+                                        </div>
+                                        <div>
+                                             <a href="https://www.linkedin.com/in/abhishek-ojha-03794b1aa/"
+                                                  target="_blank">
+                                                  <img src="./images/linkedin.png" alt="">
+                                             </a>
+                                        </div>
+                                   </div>
+                              </div>
+                         </div>
+                    </aside>
+               </section>
+          </section>
+          <!--? Investors End -->
 
           <!-- ? footer start -->
           <footer>
