--- a/index.html
+++ b/index.html
@@ -329,17 +329,19 @@
                     <div class="about-right">
                          <div>
                               <h1>About Safety</h1>
-                              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio error eius quo
-                                   totam
-                                   eum,
-                                   dignissimos pariatur rem incidunt ex! Laudantium enim omnis et explicabo deserunt
-                                   debitis
-                                   tempora, minus fugit praesentium. Lorem ipsum dolor sit amet consectetur adipisicing
-                                   elit.
-                                   At,
-                                   praesentium hic laudantium provident dolor ut iste illum deserunt, aspernatur ipsum
-                                   amet.
-                                   Fugiat possimus unde odio vitae assumenda ipsum error quia.</p>
+                              <p>we are offering the the additional lighting for better view, and 24/7 camera
+                                   surveillance and our
+                                   cameras are not older analog CCTV cameras were hard-wired, newer security cameras
+                                   connect wirelessly
+                                   to the Internet and record data straight into the cloud.
+                                   License plate recognition features that capture the characters on a plate and record
+                                   the data. Modern security
+                                   cameras can be cloud-based so that data is stored off-site and not on a vulnerab
+                                   Motion sensors can detect action occurring around your video surveillance camera.
+                                   Smart software allows your security team to program
+                                   these cameras to do things like zoom in on the movement. This can be combined with an
+                                   alarm or a floodlight feature, all while recording the activate into the cloud.
+                              </p>
 
                          </div>
                     </div>
@@ -349,17 +351,14 @@
                     <div class="about-left">
                          <div>
                               <h1>About Management</h1>
-                              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio error eius quo
-                                   totam
-                                   eum,
-                                   dignissimos pariatur rem incidunt ex! Laudantium enim omnis et explicabo deserunt
-                                   debitis
-                                   tempora, minus fugit praesentium. Lorem ipsum dolor sit amet consectetur adipisicing
-                                   elit.
-                                   At,
-                                   praesentium hic laudantium provident dolor ut iste illum deserunt, aspernatur ipsum
-                                   amet.
-                                   Fugiat possimus unde odio vitae assumenda ipsum error quia.</p>
+                              <p> Pablo Parking System is a unique parking management system. Which is suitable for all
+                                   types of vehicles, it digitizes end-to end parking processes including multi-tenant,
+                                   multi-level parking, vehicle bassed parking and many more.
+
+                                   It is integrated with visitor management system, FASTag, and access control hardware.
+                                   Extremely useful for shared parking spaces, the solution automates day-to-day
+                                   processes such as auto-identifying appropriate parking slots - be it reserved or
+                                   pay-and-park, auto-generating parking tickets, levying penalties,and many more.</p>
 
                          </div>
                     </div>
