--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
           <section id="about">
                <div class="about-head">
                     <p>About Us</p>
-                    <p>Best Customer Experience</p>
+                    <p>We are offering these services</p>
                </div>
                <div class="about-container1">
                     <div class="about-left">
